# OxiCloud

./: .gitignore  CLAUDE.md  Cargo.toml  biome.json  build.rs  example.env  jsconfig.json  justfile
.agents/skills/OxiCloud/: SKILL.md
.claude/: ecc-tools.json  identity.json
.codex/: AGENTS.md
.github/workflows/: ci.yml
docs/architecture/: magic-link-auth.md
docs/config/: env.md  storage-fine-tuning.md
migrations/: 20260520000000_rebac_access_grants.sql  20260612000004_magic_link_tokens.sql
scripts/: build-wasm.sh  sync-upstream.sh
src/: main.rs
src/application/dtos/: grant_dto.rs  i18n_dto.rs  mod.rs
src/application/ports/: authorization_ports.rs  blob_storage_ports.rs  chunked_upload_ports.rs  dedup_ports.rs  file_ports.rs  folder_ports.rs  mod.rs  storage_ports.rs
src/common/: config.rs  di.rs  locale.rs  mime_detect.rs  mod.rs  stubs.rs  temp.rs
src/infrastructure/: auth_factory.rs
src/interfaces/: mod.rs  upload_ingest.rs  upload_spool.rs
static/: admin.html  device-verify.html  index.html  login.html  nextcloud-error.html  nextcloud-login.html  nextcloud-success.html  profile.html  share.html
static/css/: main.css
static/locales/: ar.json  de.json  en.json  es.json  fa.json  fr.json  hi.json  it.json  ja.json  ko.json  nl.json  pl.json  pt.json  ru.json  zh-TW.json  zh.json
tests/api/: external_users.hurl  grants.hurl  run.sh
tests/common/: server.env
tests/e2e/: global-teardown.ts  package.json  playwright.config.ts  start-server.sh
tests/webdav/: common.sh
wasm/oxicloud-hash/: Cargo.toml
wasm/oxicloud-hash/src/: lib.rs
(+128 files in other folders)
